# bblocks-rdfxml-validator-plugin

./: README.md  pyproject.toml
bbplugin_rdfxml_validator/: __init__.py
